# meilisearch-demo

./: .gitattributes  Cargo.toml  Justfile  README.md  compose.yaml  flake.nix  justfile
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: checks.yml
src/: cli.rs  error.rs  lib.rs  main.rs  meili.rs  movie.rs
