[package]
name = "meilisearch-demo"
version = "0.1.0"
edition = "2021"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
description = "Meilisearch client demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
meilisearch-sdk = "0.24.2"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
