[package]
name = "meilisearch-demo"
version = "0.1.0"
edition = "2021"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
description = "Meilisearch client demo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
meilisearch-sdk = "0.24.3"
once_cell = "1.18.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
