# ------- #
# package
# ------- #

[package]
name = "meilisearch-demo"
version = "0.1.0-alpha"
edition = "2024"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/meilisearch-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

# ------- #
# profile
# ------- #

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

# ------------ #
# dependencies
# ------------ #

[dependencies]
clap = { version = "4.5.34", features = ["derive", "cargo"] }
meilisearch-sdk = "0.32.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# ------------- #
# linting rules
# ------------- #

# Rustc lints (https://doc.rust-lang.org/rustc/lints/index.html).
[lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"

# Rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html).
[lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# Clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
[lints.clippy]
# Clippy lint groups (https://doc.rust-lang.org/stable/clippy/lints.html).
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Indivisual clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
needless_pass_by_value = "allow"
rest_pat_in_fully_bound_structs = "warn"
lossy_float_literal = "warn"
empty_enum_variants_with_brackets = "warn"
verbose_file_reads = "warn"
suboptimal_flops = "warn"
str_to_string = "warn"
integer_division = "warn"
allow_attributes = "warn"
imprecise_flops = "warn"
exit = "warn"
